@@ -1,3 +1,6 @@
+4540.	[bug]		Correctly handle ecs entries in dns_acl_isinsecure.
+			[RT #43601]
+
 4539.	[bug]		Referencing a nonexistant zone with rpz could lead
 			to a assertion failure when configuring. [RT #43787]
 
